# syn-utils

./: .gitignore  Cargo.toml  README.md  cliff.toml
src/: attributes.rs  control_flow.rs  enum_variant.rs  expr.rs  expr_trait.rs  field.rs  field_or_variant.rs  generic_args.rs  lib.rs  macros.rs  path.rs  path_segment.rs  type_ext.rs  type_parser.rs
src/parsers/: mod.rs
src/type_parser/: mod.rs  primitives.rs  rust_type.rs  type_info.rs
tests/: inner_path.rs  type_parsing.rs
