[package]
name = "syn-utils"
version = "0.1.0"
edition = "2024"
keywords = ["syn", "utilities"]
license = "MPL-2.0"
readme = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
