[package]
name = "syn-utils"
version = "0.2.0"
edition = "2024"
description = "Utilities for syn parsing."
repository = "https://github.com/Rick-Phoenix/syn-utils"
keywords = ["syn", "utilities"]
license = "MPL-2.0"
readme = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
